# services

./: .gitignore  Caddyfile  Caddyfile.dev  Makefile  README.md  auth.go  docker-compose.yml  nginx.conf  nginx.dev.conf  relations.yml
auth/: .dockerignore  Cargo.toml  Dockerfile  diesel.toml  go.mod  go.sum  main.go  sqlx-data.json
auth/_migrations/2023-08-23-103726_add_users_table/: up.sql
auth/_migrations/2023-08-23-122248_add_refresh_tokens_table/: up.sql
auth/_migrations/2023-08-31-192323_add_remeber_me_to_refresh_token/: up.sql
auth/controllers/: logout.go  refresh.go  register_module.go  register_user.go
auth/middleware/: access_token.go
auth/migrations/2023-04-11-194050_create_users/: up.sql
auth/migrations/2023-04-11-204702_unique_user_id/: down.sql  up.sql
auth/migrations/2023-04-11-210327_rename_users_to_sessions/: down.sql  up.sql
auth/migrations/2023-04-11-210625_create_actual_users/: up.sql
auth/migrations/2023-04-14-100726_remove_unique_user_id_on_session/: down.sql  up.sql
auth/migrations/2023-04-21-122259_add_session_internal_id/: down.sql  up.sql
auth/migrations/2023-05-21-105013_add_client_type_to_session/: down.sql  up.sql
auth/migrations/2023-05-21-115235_rename_user_id_to_client_identifier/: down.sql  up.sql
auth/migrations/2023-05-21-123409_add_modules/: up.sql
auth/providers/: postgres_auth.go
auth/repositories/: refresh_token.go
auth/routes/: is_valid.go  login_module.go  login_user.go  logout.go  meta.go  register_module.go
auth/src/: config.rs  main.rs  schema.rs
auth/src/controllers/: get_session_by_internal_id.rs  get_sessions_for_client.rs  get_sessions_for_user.rs  get_user.rs  login_module.rs  login_user.rs  mod.rs  register_module.rs  register_user.rs  remove_session.rs  verify_session.rs
auth/src/models/: mod.rs  module.rs  session.rs  user.rs
auth/src/types/: app_context.rs  client_type.rs  consts.rs  create_module_response.rs  meta.rs  mod.rs  rest_error.rs  session.rs  session_info.rs  user.rs
auth/src/utils/: generate_private_key.rs  hash_string.rs  meta.rs  mod.rs  verify_clear_password.rs
auth/src/views/: login.rs  meta.rs  mod.rs  verify.rs
auth/types/: auth_provider.go  client_context.go  tokens.go
auth/utils/: general.go  meta.go  tokens.go
currency/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  go.mod  go.sum  log4rs.yaml  main.go  sqlx-data.json
currency/controllers/: force_update_rate.go  get_currency.go  get_supported_currencies.go  remove_currency.go  set_rate.go
currency/grpc/: create.go  get_enabled.go  get_supported.go
currency/grpc/generated_grpc/: currency.pb.go  currency_grpc.pb.go
currency/migrations/: 000006_unique_currency_code.down.sql  000007_fix_replace_base_dest.down.sql
currency/migrations/2023-06-25-093212_add_currencies_table/: up.sql
currency/migrations/2023-06-25-093929_add_rates_table/: up.sql
currency/migrations/2023-06-25-102807_add_currency_symbol/: down.sql  up.sql
currency/routes/: create.go  currency.go  delete.go  rate.go  set_enabled.go  supported.go
currency/services/: get_supported_currencies.go  remove_currency.go
currency/src/: app_context.rs  config.rs  main.rs  schema.rs
currency/src/controllers/: delete_currency.rs  delete_rate.rs  get_all_currencies.rs  get_currency.rs  (+8 more)
currency/stores/: exchangerate_api_store.go
currency/types/: app_stores.go  rate.go  rest_context.go  rest_error.go  supported_currency.go
modulerealtime/: .env  .gitignore  Cargo.toml  Makefile  go.mod  go.sum  main.go
modulerealtime/handlers/: on_connect.go
modulerealtime/src/: config.rs  main.rs
modulerealtime/types/: app_context.go  contexts.go  rest_context.go
modulerealtime/utils/: check_envs.go  config.go
realtime/: .gitignore  Cargo.toml  Dockerfile  go.mod  go.sum  log4rs.yaml  main.go
realtime/controllers/: reply.go  send_command.go
realtime/middleware/: access_token.go
realtime/repositories/: auth.go  mq.go  state.go
realtime/routes/: eavesdrop.go  events.go  meta.go  reply.go  send_command.go  send_simple.go  ws.go
realtime/src/: config.rs  main.rs
realtime/types/: app_context.go  client_context.go  command.go  config.go  consts.go  message.go  meta.go  mq_message.go  rest_context.go
realtime/utils/: auth_utils.go  load_meta.go  meta.go  misc.go  sse_utils.go
(+488 files in other folders)
