[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["console_appender"] }
redis_rs = "0.9.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["postgres", "time", "runtime-tokio", "runtime-tokio-native-tls", "offline", "macros"] }
time = "0.3.20"
