[package]
name = "service-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["cookies"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde", "clock"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["console_appender"] }
redis_rs = "0.9.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls", "offline", "macros"] }
time = "0.3.20"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
