[package]
name = "service-currency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
decimal = "2.1.0"
dotenv = "0.15.0"
envconfig = "0.10.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["console_appender"] }
reqwest = "0.11.16"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.3", features = ["postgres", "chrono", "decimal", "runtime-tokio-rustls", "macros"] }
time = "0.2"

