[package]
name = "service-realtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["cookies"] }
actix-web-lab = "0.19.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-stream = "0.3.5"
chrono = "0.4.24"
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
deadpool-redis = "0.12.0"
redis = { version = "0.23", features = ["tokio-native-tls-comp"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
futures-lite = "1.13.0"
lapin = { version = "2.1.1", features = ["native-tls"] }
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["console_appender"] }
serde = "1.0.163"
tokio = { version = "1.27.0", features = ["time"] }
tokio-stream = "0.1.12"
uuid = { version = "1.3.3", features = ["v4"] }
